# MapleSalon2

./: .gitignore  CHANGELOG.md  README.md  bun.lockb  index.html  package-lock.json  package.json  panda.config.ts  park-ui.json  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml  test-pr.yml
doc/: questions-en_us.md  questions-zh_tw.md
src/: App.css  App.tsx  index.tsx  lucide-solid.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: add_command.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  main.rs  models.rs  store.rs
src-tauri/src/handlers/: chair.rs  equip.rs  image_map.rs  item.rs  json.rs  map.rs  mod.rs  mount.rs  mount_skill_id.rs  path.rs  png.rs  skill.rs  smap.rs  string.rs  webp.rs  zmap.rs
src-tauri/src/server/: extractors.rs  middlewares.rs  mod.rs  models.rs
src-tauri/src/server/controller/: mapping.rs  mod.rs  node.rs  string.rs
src-tauri/src/utils/: block_parse.rs  mod.rs  node.rs  resolver.rs  uol_json.rs
src/components/: AppContainer.tsx  BaseWzSelector.tsx  Character.tsx  GlobalConfirmDialog.tsx  GlobalDialog.tsx  GlobalItemContextMenu.tsx  GlobalToast.tsx  GlobalTour.tsx  ItemNameSearch.tsx  LoadableEquipIcon.tsx  PinIconButton.tsx  SimpleCharacter.tsx  ToolTabPage.tsx  ToolTabsRadioGroup.tsx
src/const/: actions.ts  categoryIcon.ts  ears.ts  emotions.ts  equipments.ts  extraParts.ts  face.ts  hand.ts  icon.ts  job.ts  scene.ts  toolTab.ts  tour.ts
src/context/: i18n.tsx  itemContextMenu.tsx
src/directive/: horizontalScroll.tsx
(+557 files in other folders)
