[package]
name = "maplecharactercreator"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-dialog = "2.0.0-rc.0"
tauri-plugin-fs = "2.0.0-rc.0"
tauri-plugin-shell = "2.0.0-rc.0"
tauri-plugin-store = "2.0.0-rc.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
rayon = "1.9.0"
wz_reader = { version = "0.0.10", features = ["json"] }
image = { version = "0.25.0", default-features = false, features = ["rayon", "bmp", "webp"] }
tokio = { version = "1.0", features = ["net", "fs"] }
futures = { version = "0.3.30" }
portpicker = { version = "0.1.1" }
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["cors"] }
